<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="General">
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_brightness_4_black_24dp"
            android:key="dark_theme"
            android:title="Darktheme" />
        <ListPreference
            android:entries="@array/fragments"
            android:entryValues="@array/fragments_values"
            android:key="start_fragment"
            android:summary="@string/default_fragment_summary"
            android:title="@string/default_fragment_pref"
            app:dialogTitle="@string/default_fragment_pref" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Gallery">
        <ListPreference
            android:entries="@array/sortmodes"
            android:entryValues="@array/sortmodes"
            android:key="gallery_sort"
            android:summary="@string/default_gallery_sort_summary"
            android:title="@string/default_gallery_sort_pref"
            app:dialogTitle="@string/default_gallery_sort_pref" />
        <ListPreference
            android:entries="@array/thumbnail_resolutions"
            android:entryValues="@array/thumbnail_resolution_values"
            android:key="thumbnail_res"
            android:summary="@string/thumbnail_resolution_summary"
            android:title="@string/thumbnail_res"
            app:dialogTitle="@string/thumbnail_res" />
        <!--        <Preference-->
        <!--            android:key="stylized"-->
        <!--            android:summary="summary_stylish_preference"-->
        <!--            android:title="title_stylish_preference" />-->

        <!--        <Preference-->
        <!--            android:key="icon"-->
        <!--            android:title="title_icon_preference"-->
        <!--            android:summary="summary_icon_preference"-->
        <!--            android:icon="@android:drawable/ic_menu_camera"/>-->

        <!--        <Preference-->
        <!--            android:key="single_line_title"-->
        <!--            android:summary="summary_single_line_title_preference"-->
        <!--            android:title="title_single_line_title_preference"-->
        <!--            app:singleLineTitle="true" />-->
    </PreferenceCategory>

    <!--    <PreferenceCategory-->
    <!--        android:title="widgets">-->

    <!--        <CheckBoxPreference-->
    <!--            android:key="checkbox"-->
    <!--            android:title="title_checkbox_preference"-->
    <!--            android:summary="summary_checkbox_preference"/>-->

    <!--        <SwitchPreferenceCompat-->
    <!--            android:key="switch"-->
    <!--            android:title="title_switch_preference"-->
    <!--            android:summary="summary_switch_preference"/>-->

    <!--        <DropDownPreference-->
    <!--            android:key="dropdown"-->
    <!--            android:title="title_dropdown_preference"-->
    <!--            android:entries="@array/entry_values"-->
    <!--            android:entryValues="@array/entry_values"/>-->

    <!--        <SeekBarPreference-->
    <!--            android:key="seekbar"-->
    <!--            android:title="title_seekbar_preference"-->
    <!--            android:max="10"-->
    <!--            android:defaultValue="5"/>-->
    <!--    </PreferenceCategory>-->

    <!--    <PreferenceCategory-->
    <!--        android:title="dialogs">-->

    <!--        <EditTextPreference-->
    <!--            android:key="edittext"-->
    <!--            android:title="title_edittext_preference"-->
    <!--            android:dialogTitle="dialog_title_edittext_preference"/>-->

    <!--        <ListPreference-->
    <!--            android:key="list"-->
    <!--            android:title="title_list_preference"-->
    <!--            android:entries="@array/fragments"-->
    <!--            android:entryValues="@array/entry_values"-->
    <!--            android:dialogTitle="dialog_title_list_preference"/>-->

    <!--        <MultiSelectListPreference-->
    <!--            android:key="multi_select_list"-->
    <!--            android:title="title_multi_list_preference"-->
    <!--            android:summary="summary_multi_list_preference"-->
    <!--            android:entries="@array/fragments"-->
    <!--            android:entryValues="@array/entry_values"-->
    <!--            android:dialogTitle="dialog_title_multi_list_preference"/>-->
    <!--    </PreferenceCategory>-->

    <!--    <PreferenceCategory-->
    <!--        android:key="advanced"-->
    <!--        android:title="advanced_attributes"-->
    <!--        app:initialExpandedChildrenCount="1">-->

    <!--        <Preference-->
    <!--            android:key="expandable"-->
    <!--            android:title="title_expandable_preference"-->
    <!--            android:summary="summary_expandable_preference"/>-->

    <!--        <Preference-->
    <!--            android:title="title_intent_preference"-->
    <!--            android:summary="summary_intent_preference">-->

    <!--            <intent android:action="android.intent.action.VIEW"-->
    <!--                android:data="http://www.android.com"/>-->

    <!--        </Preference>-->

    <!--        <SwitchPreferenceCompat-->
    <!--            android:key="parent"-->
    <!--            android:title="title_parent_preference"-->
    <!--            android:summary="summary_parent_preference"/>-->

    <!--        <SwitchPreferenceCompat-->
    <!--            android:key="child"-->
    <!--            android:dependency="parent"-->
    <!--            android:title="title_child_preference"-->
    <!--            android:summary="summary_child_preference"/>-->

    <!--        <SwitchPreferenceCompat-->
    <!--            android:key="toggle_summary"-->
    <!--            android:title="title_toggle_summary_preference"-->
    <!--            android:summaryOn="summary_on_toggle_summary_preference"-->
    <!--            android:summaryOff="summary_off_toggle_summary_preference"/>-->

    <!--        <Preference-->
    <!--            android:key="copyable"-->
    <!--            android:title="title_copyable_preference"-->
    <!--            android:summary="summary_copyable_preference"-->
    <!--            android:selectable="false"/>-->
    <!--    </PreferenceCategory>-->


    <Preference
        android:key=""
        android:selectable="false"
        android:summary=""
        android:title="" />


    <Preference
        android:key=""
        android:selectable="false"
        android:summary=""
        android:title="" />

</PreferenceScreen>