<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/app_name"
        android:textColor="@color/white_70"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@drawable/circle"
        android:elevation="6dp"
        android:tint="?attr/customBg"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:srcCompat="@drawable/nextcloud_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/url_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_filter_drama_black_24dp"
                android:drawablePadding="15dip"
                android:drawableTint="?attr/customBgContrast"
                android:ems="10"
                android:hint="@string/url_hint"
                android:inputType="textUri"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                app:layout_constraintBottom_toTopOf="@+id/username_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="15dip"
                android:drawableTint="?attr/customBgContrast"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                app:layout_constraintBottom_toTopOf="@+id/password_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="15dip"
                android:drawableTint="?attr/customBgContrast"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                app:layout_constraintBottom_toTopOf="@+id/login_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bottom_action_button"
                android:elevation="3dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/login"
                android:textColor="@color/white_70"
                app:initialCornerAngle="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="0dp"
                app:spinning_bar_width="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>